* fixed contrast funtion in less file.

--- a/www/template/default/theme/wide/style.less
+++ b/www/template/default/theme/wide/style.less
@@ -28,7 +28,7 @@
 @border-style: solid;
 @border-radius: 3px;
 
-@text-color-inverse : contrast(@color-primary, #666, #e5e5e5);
+@text-color-inverse : contrast(darken(@color-primary, 10%), #666, #e5e5e5);
 @color-primary-dark : darken(@color-primary, 8%);
 @color-pale         : spin(hsl(hue(@color-primary), 54%, 95%), -7);
 
